src/compile_warnings.txt
In file included from ./stage/parser/parser_json/parser_json.c:1:
/mnt/c/Users/ALI/Projects/Salam/src/stage/parser/parser_json/parser_json.h:14:19: error: unknown type name ‘parser_t’
   14 | char* parser_json(parser_t* parser);
      |                   ^~~~~~~~
/mnt/c/Users/ALI/Projects/Salam/src/stage/parser/parser_json/parser_json.h:16:7: warning: extra tokens at end of #endif directive [-Wendif-labels]
   16 | #endif;
      |       ^
./stage/parser/parser_json/parser_json.c:3:19: error: unknown type name ‘parser_t’
    3 | char* parser_json(parser_t* parser)
      |                   ^~~~~~~~
